--- a/pkg/templates/templates/infinispan-13.xml
+++ b/pkg/templates/templates/infinispan-13.xml
@@ -13,30 +13,13 @@
 <jgroups>
     <stack name="image-tcp" extends="tcp">
         <TCP bind_addr="${jgroups.bind.address:SITE_LOCAL}"
-             bind_port="${jgroups.bind.port,jgroups.tcp.port:{{ .JGroups.BindPort }}}"
+             bind_port="${jgroups.bind.port,jgroups.tcp.port:7800}"
              enable_diagnostics="{{ .JGroups.Diagnostics }}"
              port_range="0"
         />
-        {{ if .JGroups.DNSPing.Query }}
-        <dns.DNS_PING dns_address="{{ .JGroups.DNSPing.Address }}" dns_query="{{ .JGroups.DNSPing.Query }}"
-                      dns_record_type="{{ .JGroups.DNSPing.RecordType }}"
+        <dns.DNS_PING dns_query="{{ .StatefulSetName }}-ping.{{ .Namespace }}.svc.cluster.local"
+                      dns_record_type="A"
                       stack.combine="REPLACE" stack.position="MPING"/>
-        {{ else }}
-        <MPING bind_addr="${jgroups.bind.address:SITE_LOCAL}"/>
-        {{ end }}
-        {{ if .JGroups.FastMerge }}
-        <MERGE3 min_interval="1000" max_interval="3000" check_interval="5000" stack.combine="COMBINE"/>
-        {{ end }}
-    </stack>
-    <stack name="image-udp" extends="udp">
-        <UDP enable_diagnostics="{{ .JGroups.Diagnostics }}"
-             port_range="0"
-        />
-        {{ if .JGroups.DNSPing.Query }}
-        <dns.DNS_PING dns_address="{{ .JGroups.DNSPing.Address }}" dns_query="{{ .JGroups.DNSPing.Query }}"
-                      dns_record_type="{{ .JGroups.DNSPing.RecordType }}"
-                      stack.combine="REPLACE" stack.position="PING"/>
-        {{ end }}
         {{ if .JGroups.FastMerge }}
         <MERGE3 min_interval="1000" max_interval="3000" check_interval="5000" stack.combine="COMBINE"/>
         {{ end }}
@@ -84,7 +67,7 @@
         <MERGE3 min_interval="1000" max_interval="3000" check_interval="5000" stack.combine="COMBINE"/>
         {{ end }}     
     </stack>
-    <stack name="xsite" extends="image-{{ .JGroups.Transport }}">
+    <stack name="xsite" extends="image-tcp">
         <relay.RELAY2 xmlns="urn:org:jgroups" site="{{ (index .XSite.Sites 0).Name }}" max_site_masters="{{ .XSite.MaxRelayNodes }}"
                       can_become_site_master="{{ .XSite.RelayNodeCandidate }}"/>
         <remote-sites default-stack="relay-{{ .XSite.Transport }}">{{ range $it := .XSite.Sites }}
@@ -104,20 +87,19 @@
             {{ end }}
             {{ if .Infinispan.Authorization.Roles }}
             {{ range $role :=  .Infinispan.Authorization.Roles }}
-            <role name="{{ $role.Name }}" permissions="{{ ($role.Permissions | ListAsString) }}"/>
+            <role name="{{ $role.Name }}" permissions="{{ $role.Permissions }}"/>
             {{ end }}
             {{ end }}
         </authorization>
     </security>
     {{ end }}
     <transport cluster="${infinispan.cluster.name:{{ .Infinispan.ClusterName }}}" node-name="${infinispan.node.name:}"
-    {{if .XSite }}{{if .XSite.Sites }}stack="xsite"{{ else }}stack="image-{{ .JGroups.Transport }}"{{ end }}{{ else }}stack="image-{{ .JGroups.Transport }}"{{ end }}
+    {{if .XSite }}{{if .XSite.Sites }}stack="xsite"{{ else }}stack="image-tcp"{{ end }}{{ else }}stack="image-tcp"{{ end }}
     {{ if .Transport.TLS.Enabled }}server:security-realm="transport"{{ end }}
     />
     {{ if .CloudEvents }}
         <ce:cloudevents bootstrap-servers="{{ .CloudEvents.BootstrapServers }}" {{if .CloudEvents.Acks }} acks="{{ .CloudEvents.Acks }}" {{ end }} {{if .CloudEvents.CacheEntriesTopic }} cache-entries-topic="{{ .CloudEvents.CacheEntriesTopic }}" {{ end }}/>
     {{ end }}
-    <locks:clustered-locks num-owners="{{ .Infinispan.Locks.Owners }}" reliability="{{ .Infinispan.Locks.Reliability | UpperCase }}"/>
 </cache-container>
 <server xmlns="urn:infinispan:server:13.0">
     <interfaces>
@@ -127,9 +109,7 @@
     </interfaces>
     <socket-bindings default-interface="public" port-offset="${infinispan.socket.binding.port-offset:0}">
         <socket-binding name="default" port="${infinispan.bind.port:11222}"/>
-        {{ if .Endpoints.DedicatedAdmin }}
         <socket-binding name="admin" port="11223"/>
-        {{ end }}
     </socket-bindings>
     <security>
         {{ if .Keystore.Password }}
@@ -146,13 +126,11 @@
 				<ssl>
                         {{ if .Keystore.Path }}
                             {{ if .Keystore.Password }}
-                                <keystore path="{{  .Keystore.Path }}" {{if .Keystore.Alias }} alias="{{  .Keystore.Alias }}" {{ end }}
-                                      {{ if  eq .Keystore.SelfSignCert "true" }}generate-self-signed-certificate-host="localhost"{{ end }}>
+                                <keystore path="{{  .Keystore.Path }}" {{if .Keystore.Alias }} alias="{{ .Keystore.Alias }}" {{ end }}>
                                     <credential-reference store="credentials" alias="keystore"/>
                                 </keystore>
                             {{ else }}
-                                <keystore path="{{  .Keystore.Path }}" keystore-password="" {{if .Keystore.Alias }} alias="{{  .Keystore.Alias }}" {{ end }}
-                                      {{ if  eq .Keystore.SelfSignCert "true" }}generate-self-signed-certificate-host="localhost"{{ end }}/>
+                                <keystore path="{{  .Keystore.Path }}" keystore-password="" {{if .Keystore.Alias }} alias="{{ .Keystore.Alias }}" {{ end }}/>
                             {{ end }}
                         {{ end }}
                         {{ if  .Truststore.Path }}
@@ -164,7 +142,7 @@
 				{{ end }}
                 </server-identities>
                 {{if .Endpoints.Authenticate }}
-                {{if eq (.Endpoints.ClientCert | LowerCase) "authenticate" }}
+                {{if eq .Endpoints.ClientCert "Authenticate" }}
                 <truststore-realm/>
                 {{ else }}
                 <properties-realm groups-attribute="Roles">
@@ -174,14 +152,12 @@
                 {{ end }}
                 {{ end }}
             </security-realm>
-            {{if .Endpoints.DedicatedAdmin }}
             <security-realm name="admin">
                 <properties-realm groups-attribute="Roles">
                     <user-properties path="cli-admin-users.properties" relative-to="infinispan.server.config.path"/>
                     <group-properties path="cli-admin-groups.properties" relative-to="infinispan.server.config.path"/>
                 </properties-realm>
             </security-realm>
-            {{ end }}
             {{ if .Transport.TLS.Enabled }}
             <security-realm name="transport">
                 <server-identities>
@@ -202,44 +178,24 @@
         </security-realms>
     </security>
     <endpoints>
-        <endpoint socket-binding="default" security-realm="default" {{ if ne .Endpoints.ClientCert "none" }}require-ssl-client-auth="true"{{ end }}>
-            {{ if .Endpoints.Hotrod.Enabled }}
+        <endpoint socket-binding="default" security-realm="default" {{ if ne .Endpoints.ClientCert "None" }}require-ssl-client-auth="true"{{ end }}>
             {{ if .Endpoints.Authenticate }}
             <hotrod-connector>
                 <authentication>
-                    <sasl qop="{{ .Endpoints.Hotrod.Qop }}" server-name="{{ .Endpoints.Hotrod.ServerName }}"/>
+                    <sasl qop="auth" server-name="infinispan"/>
                 </authentication>
             </hotrod-connector>
             {{ else }}
             <hotrod-connector />
             {{ end }}
-            {{ end }}
-            {{if .Endpoints.Enabled }}
-                {{if .Endpoints.Cors }}
-                <rest-connector>
-                <cors-rules>
-                    {{range $rule := .Endpoints.Cors }}
-                    <cors-rule name="{{ $rule.Name }}" allow-credentials="{{ $rule.AllowCredentials or "false" }}"
-                               max-age-seconds="{{ $rule.MaxAgeSeconds or 0 }}">
-                        <!-- TODO: add rules $rule.AllowedOrigins.listElement('allowed-origins') or '' -->
-                    </cors-rule>
-                    {{ end }}
-                </cors-rules>
-                </rest-connector>
-                {{ else }}
-                <rest-connector />
-                {{ end }}
-            {{ end }}
+            <rest-connector />
         </endpoint>
-        {{if .Endpoints.DedicatedAdmin }}
         <endpoint socket-binding="admin" security-realm="admin">
             <rest-connector>
                 <authentication mechanisms="BASIC DIGEST"/>
             </rest-connector>
             <hotrod-connector />
         </endpoint>
-        {{ end }}
     </endpoints>
 </server>
 </infinispan>
-
