--- a/pkg/templates/templates/infinispan-13.xml
+++ b/pkg/templates/templates/infinispan-13.xml
@@ -66,7 +66,7 @@
         </authorization>
     </security>
     {{ end }}
-    <transport cluster="${infinispan.cluster.name:{{ .Infinispan.ClusterName }}}" node-name="${infinispan.node.name:}"
+    <transport cluster="${infinispan.cluster.name:{{ .ClusterName }}}" node-name="${infinispan.node.name:}"
     {{if .XSite }}{{if .XSite.Sites }}stack="xsite"{{ else }}stack="image-tcp"{{ end }}{{ else }}stack="image-tcp"{{ end }}
     {{ if .Transport.TLS.Enabled }}server:security-realm="transport"{{ end }}
     />
