--- a/pkg/templates/templates/infinispan-13.xml
+++ b/pkg/templates/templates/infinispan-13.xml
@@ -87,7 +87,7 @@
         <socket-binding name="admin" port="11223"/>
     </socket-bindings>
     <security>
-        {{ if .Keystore.Password }}
+        {{ if or .Keystore.Password .Truststore.Path }}
         <credential-stores>
           <credential-store name="credentials" path="credentials.pfx">
             <clear-text-credential clear-text="secret"/>
