--- a/pkg/templates/templates/infinispan-base-14.xml
+++ b/pkg/templates/templates/infinispan-base-14.xml
@@ -48,8 +48,10 @@
             <security-realm name="default">
                 <server-identities>
 				{{ if or .Keystore.Path .Truststore.Path}}
-				<ssl>
-                        {{ if .Keystore.Path }}
+                <ssl>
+                        {{ if.Keystore.NSS }}
+                        <keystore provider="SunPKCS11-NSS-FIPS" type="PKCS11"/>
+                        {{ else if .Keystore.Path }}
                             {{ if .Keystore.Password }}
                                 <keystore path="{{  .Keystore.Path }}" {{if .Keystore.Alias }} alias="{{ .Keystore.Alias }}" {{ end }}>
                                     <credential-reference store="credentials" alias="keystore"/>
@@ -58,7 +60,10 @@
                                 <keystore path="{{  .Keystore.Path }}" keystore-password="" {{if .Keystore.Alias }} alias="{{ .Keystore.Alias }}" {{ end }}/>
                             {{ end }}
                         {{ end }}
-                        {{ if  .Truststore.Path }}
+
+                        {{ if .Truststore.NSS }}
+                            <truststore provider="SunPKCS11-NSS-FIPS" type="PKCS11"/>
+                        {{ else if  .Truststore.Path }}
                             <truststore path="{{ .Truststore.Path }}">
                                 <credential-reference store="credentials" alias="truststore"/>
                             </truststore>
@@ -81,12 +86,17 @@
             <security-realm name="transport">
                 <server-identities>
                     <ssl>
-                        {{ if .Transport.TLS.KeyStore.Path }}
+                        {{ if .Transport.TLS.KeyStore.NSS }}
+                        <keystore provider="SunPKCS11-NSS-FIPS" type="PKCS11"/>
+                        {{ else if .Transport.TLS.KeyStore.Path }}
                         <keystore path="{{ .Transport.TLS.KeyStore.Path }}"
                                     keystore-password="{{ .Transport.TLS.KeyStore.Password }}"
                                     alias="{{ .Transport.TLS.KeyStore.Alias }}" />
                         {{ end }}
-                        {{ if .Transport.TLS.TrustStore.Path }}
+
+                        {{ if .Transport.TLS.TrustStore.NSS }}
+                        <truststore provider="SunPKCS11-NSS-FIPS" type="PKCS11"/>
+                        {{ else if .Transport.TLS.TrustStore.Path }}
                         <truststore path="{{ .Transport.TLS.TrustStore.Path }}"
                                     password="{{ .Transport.TLS.TrustStore.Password }}" />
                         {{ end }}
