--- a/pkg/templates/templates/infinispan-admin-14.xml
+++ b/pkg/templates/templates/infinispan-admin-14.xml
@@ -66,7 +66,7 @@
             </security-realm>
         </security-realms>
     </security>
-    <endpoints>
+    <endpoints security-realm="admin">
         <endpoint socket-binding="admin" security-realm="admin">
             <rest-connector>
                 <authentication mechanisms="BASIC DIGEST"/>
