Cross-site stack missing from zero capacity pod
Fixes #1915

--- a/pkg/templates/templates/infinispan-zero-14.xml
+++ b/pkg/templates/templates/infinispan-zero-14.xml
@@ -19,6 +19,41 @@
         <MERGE3 min_interval="1000" max_interval="3000" check_interval="5000" stack.combine="COMBINE"/>
         {{ end }}
     </stack>
+    {{ if .XSite }} {{ if .XSite.Sites }}
+    <stack name="relay-tunnel" extends="udp">
+        <TUNNEL
+            bind_addr="${jgroups.relay.bind.address:SITE_LOCAL}"
+            bind_port="${jgroups.relay.bind.port:0}"
+            gossip_router_hosts="{{RemoteSites .XSite.Sites}}"
+            diag.enabled="{{ .JGroups.Diagnostics }}"
+            port_range="0"
+            {{ if .JGroups.FastMerge }}reconnect_interval="1000"{{ end }}
+            {{- if .XSite.HeartbeatEnabled }}
+            heartbeat_interval="{{.XSite.HeartbeatInterval}}"
+            heartbeat_timeout="{{.XSite.HeartbeatTimeout}}"
+            {{- end}}
+            stack.combine="REPLACE"
+            stack.position="UDP"
+        />
+        <!-- we are unable to use FD_SOCK with openshift -->
+        <!-- otherwise, we would need 1 external service per pod -->
+        <FD_SOCK2 stack.combine="REMOVE"/>
+        <!-- defaults: https://github.com/belaban/JGroups/blob/25394fdc3e781814dfdd9c9006ba0c0de3b62071/src/org/jgroups/protocols/FailureDetection.java#L27-L32 -->
+        <FD_ALL3
+            interval="${jgroups.xsite.fd.interval:8000}"
+            timeout="${jgroups.xsite.fd.timeout:40000}"
+            stack.combine="COMBINE"/>
+        {{ if .JGroups.FastMerge }}
+        <MERGE3 min_interval="1000" max_interval="3000" check_interval="5000" stack.combine="COMBINE"/>
+        {{ end }}
+    </stack>
+    <stack name="xsite" extends="image-tcp">
+        <relay.RELAY2 xmlns="urn:org:jgroups" site="{{ (index .XSite.Sites 0).Name }}" max_site_masters="{{ .XSite.MaxRelayNodes }}" can_become_site_master="false"/>
+        <remote-sites default-stack="relay-tunnel">{{ range $it := .XSite.Sites }}
+            <remote-site name="{{ $it.Name }}"/>
+        {{ end }}</remote-sites>
+    </stack>
+    {{ end }} {{ end }}
 </jgroups>
 <cache-container name="default" statistics="true" zero-capacity-node="true">
     {{ if .Infinispan.Authorization.Enabled }}
@@ -38,7 +73,9 @@
     </security>
     {{ end }}
     <transport cluster="${infinispan.cluster.name:{{ .ClusterName }}}" node-name="${infinispan.node.name:}"
-    stack="image-tcp" />
+    {{if .XSite }}{{if .XSite.Sites }}stack="xsite"{{ else }}stack="image-tcp"{{ end }}{{ else }}stack="image-tcp"{{ end }}
+    {{ if .Transport.TLS.Enabled }}server:security-realm="transport"{{ end }}
+    />
 </cache-container>
 <server xmlns="urn:infinispan:server:14.0">
     <interfaces>
@@ -57,6 +94,23 @@
                     <group-properties path="cli-admin-groups.properties" relative-to="infinispan.server.config.path"/>
                 </properties-realm>
             </security-realm>
+            {{ if .Transport.TLS.Enabled }}
+            <security-realm name="transport">
+                <server-identities>
+                    <ssl>
+                        {{ if .Transport.TLS.KeyStore.Path }}
+                        <keystore path="{{ .Transport.TLS.KeyStore.Path }}"
+                                    keystore-password="{{ .Transport.TLS.KeyStore.Password }}"
+                                    alias="{{ .Transport.TLS.KeyStore.Alias }}" />
+                        {{ end }}
+                        {{ if .Transport.TLS.TrustStore.Path }}
+                        <truststore path="{{ .Transport.TLS.TrustStore.Path }}"
+                                    password="{{ .Transport.TLS.TrustStore.Password }}" />
+                        {{ end }}
+                    </ssl>
+                </server-identities>
+            </security-realm>
+            {{ end }}
         </security-realms>
     </security>
     <endpoints>
