TestPodDegradationAfterOOM failures with Infinispan 15. Fixes #1997

--- a/pkg/templates/templates/infinispan-base-15.xml
+++ b/pkg/templates/templates/infinispan-base-15.xml
@@ -8,6 +8,7 @@
     xmlns:ce="urn:infinispan:config:cloudevents:15.0">
 
 <cache-container name="default" statistics="true">
+    <global-state unclean-shutdown-action="IGNORE" />
     {{ if .Infinispan.Authorization.Enabled }}
     <security>
         <authorization group-only-mapping="false">
