--- a/pkg/templates/templates/infinispan-base-15.xml
+++ b/pkg/templates/templates/infinispan-base-15.xml
@@ -1,11 +1,9 @@
 <infinispan
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="urn:infinispan:config:15.0 https://infinispan.org/schemas/infinispan-config-15.0.xsd
-                        urn:infinispan:server:15.0 https://infinispan.org/schemas/infinispan-server-15.0.xsd
-                        urn:infinispan:config:cloudevents:15.0 https://infinispan.org/schemas/infinispan-cloudevents-config-15.0.xsd"
+                        urn:infinispan:server:15.0 https://infinispan.org/schemas/infinispan-server-15.0.xsd"
     xmlns="urn:infinispan:config:15.0"
-    xmlns:server="urn:infinispan:server:15.0"
-    xmlns:ce="urn:infinispan:config:cloudevents:15.0">
+    xmlns:server="urn:infinispan:server:15.0">
 
 <cache-container name="default" statistics="true">
     <global-state unclean-shutdown-action="IGNORE" />
@@ -29,9 +27,6 @@
     {{if .XSite }}{{if .XSite.Sites }}stack="xsite"{{ else }}stack="image-tcp"{{ end }}{{ else }}stack="image-tcp"{{ end }}
     {{ if .Transport.TLS.Enabled }}server:security-realm="transport"{{ end }}
     />
-    {{ if .CloudEvents }}
-        <ce:cloudevents bootstrap-servers="{{ .CloudEvents.BootstrapServers }}" {{if .CloudEvents.Acks }} acks="{{ .CloudEvents.Acks }}" {{ end }} {{if .CloudEvents.CacheEntriesTopic }} cache-entries-topic="{{ .CloudEvents.CacheEntriesTopic }}" {{ end }}/>
-    {{ end }}
 </cache-container>
 <server xmlns="urn:infinispan:server:15.0">
     <socket-bindings default-interface="public" port-offset="${infinispan.socket.binding.port-offset:0}">
