--- a/pkg/templates/templates/infinispan-admin.xml
+++ b/pkg/templates/templates/infinispan-admin.xml
@@ -1,12 +1,6 @@
-<infinispan
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="urn:infinispan:config:15.0 https://infinispan.org/schemas/infinispan-config-15.0.xsd
-                        urn:infinispan:server:15.0 https://infinispan.org/schemas/infinispan-server-15.0.xsd
-                        urn:org:jgroups http://www.jgroups.org/schema/jgroups-5.3.xsd"
-    xmlns="urn:infinispan:config:15.0"
-    xmlns:server="urn:infinispan:server:15.0">
+{{template "header.xml" . }}
 
-<jgroups>
+<jgroups xsi:schemaLocation="http://www.jgroups.org/schema/jgroups-{{ .JGroups.Version.Major }}.{{ .JGroups.Version.Minor }}.xsd">
     {{ if .XSite }} {{ if .XSite.Sites }}
     <stack name="relay-tunnel" extends="udp">
         <TUNNEL
@@ -53,7 +47,7 @@
         {{ end }}</remote-sites> {{ end }}{{ end }}
     </stack>
 </jgroups>
-<server xmlns="urn:infinispan:server:15.0">
+<server xmlns="urn:infinispan:server:{{ .Infinispan.Version.Major }}.{{ .Infinispan.Version.Minor }}">
     <interfaces>
         <interface name="public">
             <inet-address value="${infinispan.bind.address}"/>
