[#2420] Utilise SHA-256 authentication instead of DIGEST
- Continue to utilise DIGEST for 14.0.x servers

--- a/pkg/templates/templates/infinispan-admin.xml
+++ b/pkg/templates/templates/infinispan-admin.xml
@@ -23,7 +23,7 @@
     <endpoints security-realm="admin">
         <endpoint socket-binding="admin" security-realm="admin">
             <rest-connector>
-                <authentication mechanisms="BASIC DIGEST"/>
+                <authentication mechanisms="BASIC DIGEST{{ if ge .Infinispan.Version.Major 15 }}-SHA-256{{ end }}"/>
             </rest-connector>
             <hotrod-connector />
         </endpoint>
