--- a/pkg/templates/templates/infinispan-zero.xml
+++ b/pkg/templates/templates/infinispan-zero.xml
@@ -45,7 +45,7 @@
     <endpoints>
         <endpoint socket-binding="admin" security-realm="admin">
             <rest-connector>
-                <authentication mechanisms="BASIC DIGEST"/>
+                <authentication mechanisms="BASIC DIGEST{{ if ge .Infinispan.Version.Major 15 }}-SHA-256{{ end }}"/>
             </rest-connector>
             <hotrod-connector />
         </endpoint>
